align items correctly on first section for mobile with new mountain breakup

--- a/css/custom.css
+++ b/css/custom.css
@@ -114,14 +114,14 @@ img {
 }
 .index-image img {
 	width: 100%;
-	height: 30vw;
+	/*height: 30vw;*/
 	min-width: 250px;
 }
 #index-page .container-fluid {
 	padding-left: 0px;
 	padding-right: 0px;
 }
-.index-profile-image {
+.index-profile-image img {
 	max-width: 250px;
 	margin: 0 auto;
 	padding: 15px;
@@ -134,7 +134,7 @@ img {
 }
 @media only screen and (min-width: 800px) {
 	.bottom-of-page-desktop {
-		padding-top: 55vh;
+		padding-top: 65vh;
 		margin-bottom: 20px;
 	}
 	.index-profile-image {
@@ -156,6 +156,11 @@ img {
 @media only screen and (max-width: 799px) {
 	.index-profile-image {
 		margin: 30px auto;
+		width: 100%;
+		text-align: center;
+	}
+	.index-profile-image img {
+		min-width: 300px;
 	}
 	.bottom-of-page-desktop {
 		padding-top: 0px;
@@ -164,10 +169,16 @@ img {
 	.bottom-of-page-desktop h3 {
 		font-size: 24px;
 	}
+	.index-image {
+		height: 110px;
+		margin: 0 auto;
+		width: 280px;
+	}
 	.index-image img {
-		width: 100%;
-		height: 30vw;
-		min-width: 250px;
+		position: relative;
+		top: -20px;
+		margin: 0 auto;
+		text-align: center;
 	}
 }
 .large-description {
